# rs_vue2_compiler

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/rs_vue2_compiler/: Cargo.toml
crates/rs_vue2_compiler/src/: ast_element.rs  ast_elements.rs  ast_tree.rs  directives_model.rs  element_processor.rs  filter_parser.rs  helpers.rs  lib.rs  text_parser.rs  uni_codes.rs  unicodes.rs  util.rs  warn_logger.rs  web.rs
crates/rs_vue2_compiler/src/web/: attrs.rs  compiler.rs  element.rs  options.rs
crates/rs_vue2_compiler/src/web/compiler/: class.rs  model.rs  style.rs
crates/rs_vue2_compiler/tests/: parser_tests.rs
