[package]
name = "rs_vue2_compiler"
version = "0.0.1"
edition = "2021"


[dependencies]
rs_html_parser = {version = "0.0.8"}
rs_html_parser_tokenizer = {version = "0.0.6"}
rs_html_parser_tokenizer_tokens = {version = "0.0.6"}
rs_html_parser_tokens = {version = "0.0.8"}

regex = "1.10.2"
lazy_static = "1.4.0"
unicase = "2.7.0"
unicase_collections = "0.3.0"
log = "0.4.20"
